--- a/twig/editcontent/fields/_select.twig
+++ b/twig/editcontent/fields/_select.twig
@@ -89,7 +89,7 @@
     {% if field.sortable|default(false) %}
         <script>
             $(function() {
-                $('#{{ key }}').select2Sortable({});
+                $('#{{ key }}').select2().select2Sortable({});
             });
         </script>
     {% endif %}
