--- a/web/select2.sortable.css
+++ b/web/select2.sortable.css
@@ -7,12 +7,12 @@
   width: 100%;
 }
 
-.sortable-select2-container .select2-choices {
+.sortable-select2-container .select2-selection__choice {
   border-radius: 0px;
   border-color: #d0d0d0;
 }
 
-.sortable-select2-container .select2-container-multi .select2-choices {
+.sortable-select2-container .select2-selection__choice {
   border-color: #d0d0d0;
   padding: 0px;
 }
