--- a/twig/editcontent/fields/_select.twig
+++ b/twig/editcontent/fields/_select.twig
@@ -89,7 +89,7 @@
     {% if field.sortable|default(false) %}
         <script>
             $(function() {
-                $.widget('bolt.fieldSelect', Bolt.fieldSelect, {
+                $.widget('bolt.myfieldSelect', $.bolt.fieldSelect, {
                     _create: function() {
                         this._super();
                         var select = this.element.find('select');
