--- a/web/select2.sortable.css
+++ b/web/select2.sortable.css
@@ -15,6 +15,8 @@
 .sortable-select2-container .select2-selection__choice {
   border-color: #d0d0d0;
   padding: 0px;
+  display: block;
+  width:100%;
 }
 
 .sortable-select2-container .select2-drop {
