--- a/web/select2.sortable.css
+++ b/web/select2.sortable.css
@@ -8,16 +8,16 @@
 }
 
 .sortable-select2-container .select2-selection__choice {
-
-}
-
-.sortable-select2-container .select2-selection__choice {
     border-color: #d0d0d0;
     padding: 0px;
     display: block;
     width:100%;
     border-radius: 0px;
     border-color: #d0d0d0;
+}
+
+.sortable-select2-container .select2-selection__choice:hover {
+    cursor:move;
 }
 
 .sortable-select2-container .select2-drop {
